kube/decidim-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-app-staging-deployment
spec:
  selector:
    matchLabels:
      app: decidim-app-staging
  template:
    metadata:
      labels:
        app: decidim-app-staging
    spec:
      containers:
      - name: decidim-app-staging
        image: rg.fr-par.scw.cloud/decidim-app/decidim-app:latest
        resources:
          requests:
            cpu: "900m"
            memory: "1250Mi"
          limits:
            cpu: "1024m"
            memory: "1500Mi"
        ports:
        - containerPort: 3000
