kube/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: decidim-app-staging-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: decidim-app-staging
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
